--- a/점주로그인.css
+++ b/점주로그인.css
@@ -22,7 +22,10 @@ a{
   width: 1280px;
   margin-top: 50px;
   margin: auto;
+  position: relative;
+
 }
+
 
 img{
   width: 50px;
@@ -35,19 +38,18 @@ span{
 /*--------------------------------헤더-----------------------------*/
 
 .header{
-  margin-top: 50px;
   background-color: #F4F4F4;
   padding: 10px 0px;
   border: 1px solid black;
-  position: fixed;
+  border-bottom: none;
+  top: 0px;
+  width: 1277px;
 }
 
 .header1{
-  
   display: flex;
   justify-content: space-between;
   background-color: white;
-  
 }
 
 .title{
@@ -66,16 +68,37 @@ span{
 /*---------------------------------메인-----------------------------*/
 .main{
  background-color: #F4F4F4;
- height: 500px;               /*높이 알아서*/
+ height: 100vh;               /*높이 알아서*/
  border: 1px solid black;
+}
+.box1 > h3{
+  text-align: center;
+  padding-top: 140px; padding-bottom: 80px;
+  font-size: 30px;
+
 }
 
 .main-center{
   width: 90%;
   background-color: white;
-  margin: 200px auto;
+  margin: 20px auto;
   height: 90%;           
   border-radius: 15px;
+  text-align: center;
+}
+.ListIdBox, .ListPwdBox{
+  display: flex;
+  justify-content: center;
+  margin: 20px; 
+}
+.box1 >button{
+  padding: 10px;
+}
+.box1 > ul{
+  display: flex;
+  justify-content: center;
+  padding: 70px;
+ 
 }
 /*---------------------------------푸터-----------------------------*/
 
@@ -85,8 +108,9 @@ span{
   padding: 20px;
   font-size: 12px;
   border: 1px solid black;
-  position: fixed;
+  width: 1257px;
 }
+
 
 .footer-left > ul {
   text-align: right;
