--- a/productWriter/productWriter.css
+++ b/productWriter/productWriter.css
@@ -36,7 +36,7 @@ span{
 
 .header{
   background-color: #F4F4F4;
-  padding: 10px 0px;
+  padding: 10px 70px;
   border-left:  1px solid gray;
   border-right:  1px solid gray;
 }
@@ -45,6 +45,7 @@ span{
   display: flex;
   justify-content: space-between;
   background-color: white;
+  border-radius: 20px;
 }
 
 .title{
@@ -53,24 +54,63 @@ span{
 }
 
 .header-left{
-  padding-left: 70px;
+  padding-left: 30px;
 }
 
 .haeder-right{
-  padding-right: 70px;
+  padding-right: 30px;
   padding-top: 5px;
+  position: relative;
+}
+
+.haeder-right > button {
+  background-color: white;
+  border: 0px;
+  cursor: pointer
+}
+
+.hide::before{
+  display: block;
+  position: absolute;
+  background-position-x :-203px;
+  background-position-y :-301px;
+  background-size :468px 457px;
+  content:"";
+  background-image: url("./icon.png");
+  top: -13px;
+  width: 23px;
+  height: 13px;
+  box-shadow: 0;
+}
+.hide{
+  display: none;
+  width: 160px;
+  position: absolute;
+  background-color: white;
+  padding : 25px;
+  margin-top: 20px;
+  box-shadow: 0px 0px 5px gray;
+  border-radius: 20px;
+}
+.hide-none{
+  display: block;
+}
+.hide > a > li{
+  font-size: 20px;
+  padding: 5px 0px;
 }
 /*---------------------------------메인-----------------------------*/
 .main{
  background-color: #F4F4F4;
  height: 100vh;               /*높이 알아서*/
  border: 1px solid gray;
+ border-top: 0px;
 }
 
 .main-center{
   width: 90%;
   background-color: white;
-  margin: 20px auto;
+  margin: 0px auto;
   height: 90%;           
   border-radius: 15px;
 }
