--- a/admin-login/admin-login.css
+++ b/admin-login/admin-login.css
@@ -49,7 +49,7 @@ span{
   padding-top: 25px;  
 
 }
-.headerWhite{ /*가로 흰 박스 내부 가운데 정렬*/
+.headerWhite{ 
   width: 1140px; height: 60px;
   background-color: white;
   /*margin: 10px 0px;*/
@@ -74,12 +74,17 @@ span{
 /*---------------------------------메인-----------------------------*/
 .main{ 
  background-color: #F4F4F4;
- height: 100vh;  /*01.23.높이 수정*/  
+ height: 100vh;                           /*01.23.높이 수정*/  
  border-left: 1px solid black; 
  border-right: 1px solid black;
  padding-top: 25px;
 }
 
+.box1{                                   /*0123 박스 전체 추가*/
+  display: flex;
+  flex-direction: column;   
+  align-items: center;  
+}
 .box1 > h3{
   text-align: center;
   padding-top: 140px; padding-bottom: 80px;
@@ -94,21 +99,24 @@ span{
   border-radius: 15px;
  }
 
-.ListIdBox > input, .ListPwdBox > input{ /* 이 코드 확인 */
+.ListIdBox > input, .ListPwdBox > input{   /* 0123 이 코드 전체 생성*/
   align-items: center;
   font-size: 20px;
   border-radius: 10px;
-  padding: 10px;     /* 0123 수정*/
-  border: 1px solid gray; /* 0123 수정*/
+  padding: 10px;                          /* 0123 수정*/
+  border: 1px solid gray;               /* 0123 수정*/
   
 }
-.ListIdBox, .ListPwdBox{ /* 0123 이 코드 전체 생성*/
+.ListIdBox, .ListPwdBox{            
   display: grid;
   grid-template-columns: 120px 250px auto;
   gap: 20px;
+  padding: 20px;                          /*0123 추가*/
+  margin-right: 120px;                    /*0123 추가*/
 }
  .box1 >button{
   padding: 10px;
+  margin: 20px;                        /* 0123 추가 */
 }
 .box1 > ul{ 
   display: flex;
@@ -120,7 +128,7 @@ span{
   display: flex;
   justify-content: center;
   padding: 20px;
-  font-size: 12px;/* 0123 보더 삭제*/
+  font-size: 12px;                           /* 0123 보더 삭제*/
   width: 0 auto;
 }
 
