--- a/admin-signup/admin-signup.css
+++ b/admin-signup/admin-signup.css
@@ -58,8 +58,6 @@ span{
   border-radius: 20px;
   display: flex;
   justify-content: space-between;
-  
-
 }
 
 
@@ -72,7 +70,7 @@ span{
   padding-left: 70px;
 }
 
-.header-right{ /*상단 우측 메뉴탭 여백*/
+.header-right{ 
   padding-right: 70px;
   padding-top: 5px;
 }
@@ -86,7 +84,7 @@ span{
   border-top: none;
 }
 
-.main-center{ /*흰 박스*/
+.main-center{ 
   width: 90%;
   background-color: white;
   margin: 50px auto;
@@ -96,18 +94,28 @@ span{
   justify-content: center;
   align-items: center; 
 }
-.box1 > div { /* id~ 편의점tel */
+.box1 > div { 
   width: 500px;
   display: grid;
   grid-template-columns: 120px 250px auto;
   gap: 10px;
   margin-bottom: 10px;
+  padding: 10px;        /* 0123 추가 */
+  
+}
+.box1 > div > input{   /* 0123 이 코드 전체 생성*/
+  align-items: center;
+  font-size: 20px;
+  border-radius: 10px;
+  padding: 10px;                          
+  border: 1px solid gray;               
+  
 }
 
 .box1 > button{ 
   font-size: 20px;
   padding: 10px;
-  margin-left: 200px; /* 0122 수정 버튼 가운데로*/
+  margin-left: 200px; 
 }
 
 
@@ -118,7 +126,7 @@ span{
   padding: 20px;
   font-size: 12px;
   width: 0 auto;
-  /* 01.23. border 전체 삭제 */
+                                          /* 01.23. border 전체 삭제 */
 }
 
 .footer-left > ul {
