--- a/productUpdate/productUpdate.css
+++ b/productUpdate/productUpdate.css
@@ -166,6 +166,15 @@ td{
   margin-left: 20px;
   cursor: pointer
 }
+
+.update-tbody > tr > td> img{
+ 
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+    border-radius: 10px;
+
+}
 /*---------------------------------푸터-----------------------------*/
 
 .footer{
