--- a/productView/productView.css
+++ b/productView/productView.css
@@ -202,6 +202,15 @@ td{
   padding-top: 30px;
 }
 
+.view-tbody > tr > td> img{
+ 
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+    border-radius: 10px;
+
+}
+
 /*---------------------------------푸터-----------------------------*/
 
 .footer{
